.antlr/bccParser.java
// Generated from /mnt/c/Users/eccar/projects/university/talp/bcc-lexer/bcc.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TK_FUNCTION=1, FID=2, VAR=3, PRINT=4, TK_INPUT=5, TK_WHEN=6, TK_DO=7, 
		TK_IF=8, TK_ELSE=9, TK_UNLESS=10, TK_WHILE=11, TK_RETURN=12, TK_UNTIL=13, 
		TK_LOOP=14, TK_REPEAT=15, TK_FOR=16, TK_END=17, TK_NEXT=18, TK_BREAK=19, 
		TK_AND=20, TK_OR=21, TK_NOT=22, NUM=23, BOOL=24, TRUE=25, FALSE=26, TK_MOD_ASIG=27, 
		TK_MENOR_IGUAL=28, TK_MAYOR_IGUAL=29, TK_SUM_ASIG=30, TK_RES_ASIG=31, 
		TK_MUL_ASIG=32, TK_DIV_ASIG=33, TK_INCREMENTO=34, TK_DECREMENTO=35, TK_IGUALDAD=36, 
		TK_DIFERENTE=37, TK_ASIGNACION=38, TK_DOSPUNTOS=39, TK_COMA=40, TK_PUNTOYCOMA=41, 
		TK_PAR_IZQ=42, TK_PAR_DER=43, TK_COR_IZQ=44, TK_COR_DER=45, TK_LLAVE_IZQ=46, 
		TK_LLAVE_DER=47, TK_MENOR=48, TK_MAYOR=49, TK_MAS=50, TK_MENOS=51, TK_MUL=52, 
		TK_DIV=53, TK_MOD=54, ID=55, TK_NUM=56, COMMENT=57, WS=58;
	public static final int
		RULE_prog = 0, RULE_var_decl = 1, RULE_fn_decl_list = 2, RULE_stmt_block = 3, 
		RULE_stmt = 4, RULE_lexpr = 5, RULE_nexpr = 6, RULE_rexpr = 7, RULE_simple_expr = 8, 
		RULE_term = 9, RULE_factor = 10, RULE_main_prog = 11, RULE_datatype = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "var_decl", "fn_decl_list", "stmt_block", "stmt", "lexpr", "nexpr", 
			"rexpr", "simple_expr", "term", "factor", "main_prog", "datatype"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", null, "'var'", "'print'", "'input'", "'when'", "'do'", 
			"'if'", "'else'", "'unless'", "'while'", "'return'", "'until'", "'loop'", 
			"'repeat'", "'for'", "'end'", "'next'", "'break'", "'and'", "'or'", "'not'", 
			"'num'", "'bool'", "'true'", "'false'", "'%='", "'<='", "'>='", "'+='", 
			"'-='", "'*='", "'/='", "'++'", "'--'", "'=='", "'!='", "':='", "':'", 
			"','", "';'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", 
			"'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TK_FUNCTION", "FID", "VAR", "PRINT", "TK_INPUT", "TK_WHEN", "TK_DO", 
			"TK_IF", "TK_ELSE", "TK_UNLESS", "TK_WHILE", "TK_RETURN", "TK_UNTIL", 
			"TK_LOOP", "TK_REPEAT", "TK_FOR", "TK_END", "TK_NEXT", "TK_BREAK", "TK_AND", 
			"TK_OR", "TK_NOT", "NUM", "BOOL", "TRUE", "FALSE", "TK_MOD_ASIG", "TK_MENOR_IGUAL", 
			"TK_MAYOR_IGUAL", "TK_SUM_ASIG", "TK_RES_ASIG", "TK_MUL_ASIG", "TK_DIV_ASIG", 
			"TK_INCREMENTO", "TK_DECREMENTO", "TK_IGUALDAD", "TK_DIFERENTE", "TK_ASIGNACION", 
			"TK_DOSPUNTOS", "TK_COMA", "TK_PUNTOYCOMA", "TK_PAR_IZQ", "TK_PAR_DER", 
			"TK_COR_IZQ", "TK_COR_DER", "TK_LLAVE_IZQ", "TK_LLAVE_DER", "TK_MENOR", 
			"TK_MAYOR", "TK_MAS", "TK_MENOS", "TK_MUL", "TK_DIV", "TK_MOD", "ID", 
			"TK_NUM", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bcc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Fn_decl_listContext fn_decl_list() {
			return getRuleContext(Fn_decl_listContext.class,0);
		}
		public Main_progContext main_prog() {
			return getRuleContext(Main_progContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			fn_decl_list();
			setState(27);
			main_prog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(bccParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(bccParser.ID, i);
		}
		public List<TerminalNode> TK_DOSPUNTOS() { return getTokens(bccParser.TK_DOSPUNTOS); }
		public TerminalNode TK_DOSPUNTOS(int i) {
			return getToken(bccParser.TK_DOSPUNTOS, i);
		}
		public List<DatatypeContext> datatype() {
			return getRuleContexts(DatatypeContext.class);
		}
		public DatatypeContext datatype(int i) {
			return getRuleContext(DatatypeContext.class,i);
		}
		public List<TerminalNode> TK_COMA() { return getTokens(bccParser.TK_COMA); }
		public TerminalNode TK_COMA(int i) {
			return getToken(bccParser.TK_COMA, i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(ID);
			setState(30);
			match(TK_DOSPUNTOS);
			setState(31);
			datatype();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_COMA) {
				{
				{
				setState(32);
				match(TK_COMA);
				setState(33);
				match(ID);
				setState(34);
				match(TK_DOSPUNTOS);
				setState(35);
				datatype();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_decl_listContext extends ParserRuleContext {
		public List<TerminalNode> TK_FUNCTION() { return getTokens(bccParser.TK_FUNCTION); }
		public TerminalNode TK_FUNCTION(int i) {
			return getToken(bccParser.TK_FUNCTION, i);
		}
		public List<TerminalNode> FID() { return getTokens(bccParser.FID); }
		public TerminalNode FID(int i) {
			return getToken(bccParser.FID, i);
		}
		public List<TerminalNode> TK_DOSPUNTOS() { return getTokens(bccParser.TK_DOSPUNTOS); }
		public TerminalNode TK_DOSPUNTOS(int i) {
			return getToken(bccParser.TK_DOSPUNTOS, i);
		}
		public List<DatatypeContext> datatype() {
			return getRuleContexts(DatatypeContext.class);
		}
		public DatatypeContext datatype(int i) {
			return getRuleContext(DatatypeContext.class,i);
		}
		public List<TerminalNode> TK_PAR_IZQ() { return getTokens(bccParser.TK_PAR_IZQ); }
		public TerminalNode TK_PAR_IZQ(int i) {
			return getToken(bccParser.TK_PAR_IZQ, i);
		}
		public List<TerminalNode> TK_PAR_DER() { return getTokens(bccParser.TK_PAR_DER); }
		public TerminalNode TK_PAR_DER(int i) {
			return getToken(bccParser.TK_PAR_DER, i);
		}
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public List<TerminalNode> VAR() { return getTokens(bccParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(bccParser.VAR, i);
		}
		public List<TerminalNode> TK_PUNTOYCOMA() { return getTokens(bccParser.TK_PUNTOYCOMA); }
		public TerminalNode TK_PUNTOYCOMA(int i) {
			return getToken(bccParser.TK_PUNTOYCOMA, i);
		}
		public Fn_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_decl_list; }
	}

	public final Fn_decl_listContext fn_decl_list() throws RecognitionException {
		Fn_decl_listContext _localctx = new Fn_decl_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fn_decl_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_FUNCTION) {
				{
				{
				setState(41);
				match(TK_FUNCTION);
				setState(42);
				match(FID);
				setState(43);
				match(TK_DOSPUNTOS);
				setState(44);
				datatype();
				setState(45);
				match(TK_PAR_IZQ);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(46);
					var_decl();
					}
				}

				setState(49);
				match(TK_PAR_DER);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VAR) {
					{
					setState(50);
					match(VAR);
					setState(51);
					var_decl();
					setState(52);
					match(TK_PUNTOYCOMA);
					}
				}

				setState(56);
				stmt_block();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_blockContext extends ParserRuleContext {
		public TerminalNode TK_LLAVE_IZQ() { return getToken(bccParser.TK_LLAVE_IZQ, 0); }
		public TerminalNode TK_LLAVE_DER() { return getToken(bccParser.TK_LLAVE_DER, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Stmt_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_block; }
	}

	public final Stmt_blockContext stmt_block() throws RecognitionException {
		Stmt_blockContext _localctx = new Stmt_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt_block);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_LLAVE_IZQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(TK_LLAVE_IZQ);
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(64);
					stmt();
					}
					}
					setState(67); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << TK_INPUT) | (1L << TK_WHEN) | (1L << TK_DO) | (1L << TK_IF) | (1L << TK_UNLESS) | (1L << TK_WHILE) | (1L << TK_RETURN) | (1L << TK_UNTIL) | (1L << TK_LOOP) | (1L << TK_REPEAT) | (1L << TK_FOR) | (1L << TK_NEXT) | (1L << TK_BREAK) | (1L << TK_INCREMENTO) | (1L << TK_DECREMENTO) | (1L << ID))) != 0) );
				setState(69);
				match(TK_LLAVE_DER);
				}
				break;
			case PRINT:
			case TK_INPUT:
			case TK_WHEN:
			case TK_DO:
			case TK_IF:
			case TK_UNLESS:
			case TK_WHILE:
			case TK_RETURN:
			case TK_UNTIL:
			case TK_LOOP:
			case TK_REPEAT:
			case TK_FOR:
			case TK_NEXT:
			case TK_BREAK:
			case TK_INCREMENTO:
			case TK_DECREMENTO:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(bccParser.PRINT, 0); }
		public List<LexprContext> lexpr() {
			return getRuleContexts(LexprContext.class);
		}
		public LexprContext lexpr(int i) {
			return getRuleContext(LexprContext.class,i);
		}
		public List<TerminalNode> TK_PUNTOYCOMA() { return getTokens(bccParser.TK_PUNTOYCOMA); }
		public TerminalNode TK_PUNTOYCOMA(int i) {
			return getToken(bccParser.TK_PUNTOYCOMA, i);
		}
		public TerminalNode TK_INPUT() { return getToken(bccParser.TK_INPUT, 0); }
		public TerminalNode ID() { return getToken(bccParser.ID, 0); }
		public TerminalNode TK_WHEN() { return getToken(bccParser.TK_WHEN, 0); }
		public TerminalNode TK_PAR_IZQ() { return getToken(bccParser.TK_PAR_IZQ, 0); }
		public TerminalNode TK_PAR_DER() { return getToken(bccParser.TK_PAR_DER, 0); }
		public TerminalNode TK_DO() { return getToken(bccParser.TK_DO, 0); }
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public TerminalNode TK_IF() { return getToken(bccParser.TK_IF, 0); }
		public TerminalNode TK_ELSE() { return getToken(bccParser.TK_ELSE, 0); }
		public TerminalNode TK_UNLESS() { return getToken(bccParser.TK_UNLESS, 0); }
		public TerminalNode TK_WHILE() { return getToken(bccParser.TK_WHILE, 0); }
		public TerminalNode TK_RETURN() { return getToken(bccParser.TK_RETURN, 0); }
		public TerminalNode TK_UNTIL() { return getToken(bccParser.TK_UNTIL, 0); }
		public TerminalNode TK_LOOP() { return getToken(bccParser.TK_LOOP, 0); }
		public TerminalNode TK_REPEAT() { return getToken(bccParser.TK_REPEAT, 0); }
		public TerminalNode TK_NUM() { return getToken(bccParser.TK_NUM, 0); }
		public TerminalNode TK_DOSPUNTOS() { return getToken(bccParser.TK_DOSPUNTOS, 0); }
		public TerminalNode TK_FOR() { return getToken(bccParser.TK_FOR, 0); }
		public TerminalNode TK_NEXT() { return getToken(bccParser.TK_NEXT, 0); }
		public TerminalNode TK_BREAK() { return getToken(bccParser.TK_BREAK, 0); }
		public TerminalNode TK_ASIGNACION() { return getToken(bccParser.TK_ASIGNACION, 0); }
		public TerminalNode TK_SUM_ASIG() { return getToken(bccParser.TK_SUM_ASIG, 0); }
		public TerminalNode TK_RES_ASIG() { return getToken(bccParser.TK_RES_ASIG, 0); }
		public TerminalNode TK_MUL_ASIG() { return getToken(bccParser.TK_MUL_ASIG, 0); }
		public TerminalNode TK_DIV_ASIG() { return getToken(bccParser.TK_DIV_ASIG, 0); }
		public TerminalNode TK_MOD_ASIG() { return getToken(bccParser.TK_MOD_ASIG, 0); }
		public TerminalNode TK_INCREMENTO() { return getToken(bccParser.TK_INCREMENTO, 0); }
		public TerminalNode TK_DECREMENTO() { return getToken(bccParser.TK_DECREMENTO, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		try {
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(PRINT);
				setState(75);
				lexpr();
				setState(76);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(TK_INPUT);
				setState(79);
				match(ID);
				setState(80);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(TK_WHEN);
				setState(82);
				match(TK_PAR_IZQ);
				setState(83);
				lexpr();
				setState(84);
				match(TK_PAR_DER);
				setState(85);
				match(TK_DO);
				setState(86);
				stmt_block();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				match(TK_IF);
				setState(89);
				match(TK_PAR_IZQ);
				setState(90);
				lexpr();
				setState(91);
				match(TK_PAR_DER);
				setState(92);
				match(TK_DO);
				setState(93);
				stmt_block();
				setState(94);
				match(TK_ELSE);
				setState(95);
				stmt_block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				match(TK_UNLESS);
				setState(98);
				match(TK_PAR_IZQ);
				setState(99);
				lexpr();
				setState(100);
				match(TK_PAR_DER);
				setState(101);
				match(TK_DO);
				setState(102);
				stmt_block();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				match(TK_WHILE);
				setState(105);
				match(TK_PAR_IZQ);
				setState(106);
				lexpr();
				setState(107);
				match(TK_PAR_DER);
				setState(108);
				match(TK_DO);
				setState(109);
				stmt_block();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(111);
				match(TK_RETURN);
				setState(112);
				lexpr();
				setState(113);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(115);
				match(TK_UNTIL);
				setState(116);
				match(TK_PAR_IZQ);
				setState(117);
				lexpr();
				setState(118);
				match(TK_PAR_DER);
				setState(119);
				match(TK_DO);
				setState(120);
				stmt_block();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(122);
				match(TK_LOOP);
				setState(123);
				stmt_block();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(124);
				match(TK_DO);
				setState(125);
				stmt_block();
				setState(126);
				match(TK_WHILE);
				setState(127);
				match(TK_PAR_IZQ);
				setState(128);
				lexpr();
				setState(129);
				match(TK_PAR_DER);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				match(TK_DO);
				setState(132);
				stmt_block();
				setState(133);
				match(TK_UNTIL);
				setState(134);
				match(TK_PAR_IZQ);
				setState(135);
				lexpr();
				setState(136);
				match(TK_PAR_DER);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(138);
				match(TK_REPEAT);
				setState(139);
				match(TK_NUM);
				setState(140);
				match(TK_DOSPUNTOS);
				setState(141);
				stmt_block();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(142);
				match(TK_FOR);
				setState(143);
				match(TK_PAR_IZQ);
				setState(144);
				lexpr();
				setState(145);
				match(TK_PUNTOYCOMA);
				setState(146);
				lexpr();
				setState(147);
				match(TK_PUNTOYCOMA);
				setState(148);
				lexpr();
				setState(149);
				match(TK_PAR_DER);
				setState(150);
				match(TK_DO);
				setState(151);
				stmt_block();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(153);
				match(TK_NEXT);
				setState(154);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(155);
				match(TK_BREAK);
				setState(156);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(157);
				match(ID);
				setState(158);
				match(TK_ASIGNACION);
				setState(159);
				lexpr();
				setState(160);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(162);
				match(ID);
				setState(163);
				match(TK_SUM_ASIG);
				setState(164);
				lexpr();
				setState(165);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(167);
				match(ID);
				setState(168);
				match(TK_RES_ASIG);
				setState(169);
				lexpr();
				setState(170);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(172);
				match(ID);
				setState(173);
				match(TK_MUL_ASIG);
				setState(174);
				lexpr();
				setState(175);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(177);
				match(ID);
				setState(178);
				match(TK_DIV_ASIG);
				setState(179);
				lexpr();
				setState(180);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(182);
				match(ID);
				setState(183);
				match(TK_MOD_ASIG);
				setState(184);
				lexpr();
				setState(185);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(187);
				match(ID);
				setState(188);
				match(TK_INCREMENTO);
				setState(189);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(190);
				match(ID);
				setState(191);
				match(TK_DECREMENTO);
				setState(192);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(193);
				match(TK_DECREMENTO);
				setState(194);
				match(ID);
				setState(195);
				match(TK_PUNTOYCOMA);
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(196);
				match(TK_INCREMENTO);
				setState(197);
				match(ID);
				setState(198);
				match(TK_PUNTOYCOMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexprContext extends ParserRuleContext {
		public List<NexprContext> nexpr() {
			return getRuleContexts(NexprContext.class);
		}
		public NexprContext nexpr(int i) {
			return getRuleContext(NexprContext.class,i);
		}
		public List<TerminalNode> TK_AND() { return getTokens(bccParser.TK_AND); }
		public TerminalNode TK_AND(int i) {
			return getToken(bccParser.TK_AND, i);
		}
		public List<TerminalNode> TK_OR() { return getTokens(bccParser.TK_OR); }
		public TerminalNode TK_OR(int i) {
			return getToken(bccParser.TK_OR, i);
		}
		public LexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexpr; }
	}

	public final LexprContext lexpr() throws RecognitionException {
		LexprContext _localctx = new LexprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			nexpr();
			setState(216);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TK_AND) {
					{
					{
					setState(202);
					match(TK_AND);
					setState(203);
					nexpr();
					}
					}
					setState(208);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TK_OR) {
					{
					{
					setState(209);
					match(TK_OR);
					setState(210);
					nexpr();
					}
					}
					setState(215);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
